[package]
name = "frontary"
version = "0.9.4"
edition = "2021"
publish = false

[features]
cc-password = []
debug = []
default = []
pumpkin-dark = []
pumpkin-light = []
test = []

[dependencies]
anyhow = "1"
bincode = "1"
chrono = { version = ">=0.4.35", default-features = false, features = [
    "serde",
    "wasmbind",
] }
data-encoding = "2"
gloo-events = "0.2"
gloo-file = "0.3"
gloo-storage = "0.3"
gloo-timers = "0.3"
gloo-utils = "0.2"
htmlescape = "0.3"
ipnet = { version = "2", features = ["serde"] }
js-sys = "0.3"
json-gettext = "4"
num-bigint = "0.4"
num-traits = "0.2"
passwords = { version = "3", features = ["common-password"] }
reqwasm = "0.5"
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
wasm-bindgen = { version = ">=0.2.82", features = [
    "serde-serialize",
] } # rustwasm/wasm-bindgen#2963
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Navigator",
    "TextMetrics",
] }
yew = "0.21"
